--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -10,7 +10,9 @@
         android:layout_height="260dp">
         <!--
          app:contentScrim="?attr/colorPrimary" ToolBar被折叠到顶部固定时候的背景
-         app:layout_scrollFlags="scroll|exitUntilCollapsed"联动
+         app:layout_scrollFlags="scroll|enterAlways"向上滑动时整个CollapsingToolbarLayout消失
+         app:layout_scrollFlags="scroll|enterAlwaysCollapsed"//同上
+         app:layout_scrollFlags="scroll|exitUntilCollapsed"向上滑动时LinearLayout消失，Toolbar不消失
         -->
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
@@ -18,12 +20,11 @@
             android:layout_weight="1"
             android:minHeight="100dp"
             android:background="@mipmap/bg"
-            app:contentScrim="@color/yellow"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             >
             <!--
-            app:layout_collapseMode="parallax" 布局固定
-            app:layout_collapseMode="pin"布局向上推动，然后消失
+            app:layout_collapseMode="parallax" 视差效果
+            app:layout_collapseMode="pin"固定
             -->
             <LinearLayout
                 android:layout_width="match_parent"
@@ -45,7 +46,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:text="愿有岁月可回收，且以深情共白头"
+                    android:text="愿有岁月可回首，且以深情共白头"
                     android:textColor="#ffffff" />
             </LinearLayout>
 
